# python_env

./: .editorconfig  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  sync-template.yml
src/sample_project/: core.py
tests/: test_core.py
